--- a/backend/BookStore/BookStore.BLL/BookStore.BLL.csproj
+++ b/backend/BookStore/BookStore.BLL/BookStore.BLL.csproj
@@ -6,4 +6,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.9.2" />
+    <PackageReference Include="MediatR" Version="12.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Mapping\" />
+    <Folder Include="MediatR\" />
+    <Folder Include="Dto\" />
+    <Folder Include="Behaviors\" />
+  </ItemGroup>
+
 </Project>
