Db Postgre Set Stable

--- a/backend/BookStore/BookStore.BLL/BookStore.BLL.csproj
+++ b/backend/BookStore/BookStore.BLL/BookStore.BLL.csproj
@@ -19,4 +19,8 @@
     <Folder Include="Behaviors\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BookStore.DAL\BookStore.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
