--- a/backend/BookStore/BookStore.BLL/BookStore.BLL.csproj
+++ b/backend/BookStore/BookStore.BLL/BookStore.BLL.csproj
@@ -8,14 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="FluentResults" Version="3.16.0" />
     <PackageReference Include="FluentValidation" Version="11.9.2" />
     <PackageReference Include="MediatR" Version="12.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Mapping\" />
-    <Folder Include="MediatR\" />
-    <Folder Include="Dto\" />
     <Folder Include="Behaviors\" />
   </ItemGroup>
 
